# rpi-hs

./: .gitignore  Dockerfile  cabal.project
gpio-sim/: gpio-sim.cabal
gpio-sim/spec/System/IO/: GPIOSimSpec.hs
gpio-sim/spec/System/IO/GPIOSim/: Gen.hs
gpio-sim/src/System/IO/: GPIOSim.hs
gpiod/: CHANGELOG.md  gpiod.cabal
gpiod/example/: BitVec.hs  Main.hs  SPI.hs
gpiod/spec/System/IO/: GPIODSpec.hs
gpiod/spec/System/IO/GPIOD/: ChipSpec.hs  Gen.hs  LineRequestSpec.hs  LineSpec.hs  TestUtils.hs
gpiod/src/System/IO/: GPIOD.hs
gpiod/src/System/IO/GPIOD/: Chip.hs  Error.hs  Line.hs  LineEvent.hs  LineRequest.hs  ReservedLine.hs
gpiod/src/System/IO/GPIOD/Chip/: Internal.hs
gpiod/src/System/IO/GPIOD/Line/: Internal.hs
gpiod/src/System/IO/GPIOD/LineRequest/: Bias.hs  Drive.hs  EdgeDetection.hs  RequestType.hs
ioctl-raw/: README.md  ioctl-raw.cabal
ioctl-raw/spec/: Main.hs
ioctl-raw/spec/IOCtl/: RawSpec.hsc
ioctl-raw/spec/System/IO/IOCtl/: RawSpec.hsc
ioctl-raw/src/IOCtl/: Raw.hsc
ioctl-raw/src/System/IO/IOCtl/: Raw.hsc
libgpiod/: CHANGELOG.md  libgpiod.cabal
libgpiod/spec/: Main.hs
libgpiod/src/: LibGPIOD.hsc
libgpiod/src/System/IO/: LibGPIOD.hsc
scripts/: ghcid-test-gpio-sim.sh  ghcid-test-gpiod.sh  ghcid-test-libgpiod.sh  run-docker.sh
spidev/: README.md  spidev.cabal
spidev/spec/: Main.hs  SPIDevSpec.hsc
spidev/spec/System/IO/: SPIDevSpec.hsc
spidev/src/: SPIDev.hsc
spidev/src/System/IO/: SPIDev.hs
spidev/src/System/IO/SPIDev/: Raw.hsc
