cabal-version: 3.0
name: gpio-sim
version: 1.6.2
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wcompat

common language
  default-language: Haskell2010
  default-extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards

library
  import: warnings
  import: language

  exposed-modules:
    System.IO.GPIOSim
  build-depends:
    base >= 4.14 && < 5,
    containers >= 0.6.6 && < 1,
    directory >= 1 && < 2,
    filepath >= 1.5.2 && < 2,
    random >= 1.2.1 && < 2,
    text >= 2 && < 3,
    transformers >= 0.6.1 && < 1,
  hs-source-dirs: src

test-suite gpio-sim-spec
  import: warnings
  import: language

  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  other-modules:
    System.IO.GPIOSimSpec
    System.IO.GPIOSim.Gen
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    gpio-sim,
    hedgehog,
    hspec,
    hspec-hedgehog,
