cabal-version: 3.0
name: libgpiod
version: 1.6.2
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wcompat

common language
  default-language: Haskell2010
  default-extensions:
    CApiFFI
    ForeignFunctionInterface
    GeneralizedNewtypeDeriving
    PatternSynonyms

library
  import: warnings
  import: language

  exposed-modules:
    LibGPIOD
  build-depends:
    base >= 4.14 && < 5,
    clock,
  pkgconfig-depends:
    libgpiod >= 1.6 && < 2,
  hs-source-dirs: src

test-suite libgpiod-spec
  import: warnings
  import: language

  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  build-depends:
    base,
    libgpiod
