cabal-version: 3.0
name: spidev
version: 0.1.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wcompat

common language
  default-language: Haskell2010
  default-extensions:
    CApiFFI
    DataKinds
    ForeignFunctionInterface
    GeneralizedNewtypeDeriving
    KindSignatures
    PatternSynonyms
    TypeOperators

library
  import: warnings
  import: language

  exposed-modules:
    System.IO.SPIDev
    System.IO.SPIDev.Raw
  build-depends:
    base >= 4.14 && < 5,
    ioctl-raw,
  hs-source-dirs: src

test-suite spidev-spec
  import: warnings
  import: language

  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  other-modules:
    System.IO.SPIDevSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    spidev,
    hspec,
